* [*] [internal] Update calls to use UserDefaults singleton. [#21088]
* [*] Fix memory leaks in setting up Jetpack connection. [#21052]
* [*] Fix a memory leak caused by the theme customization web view. [#21051]
* [*] [Jetpack-only] Made performance improvements for Posting Activity stats. [#21136]
* [*] Fixed a crash that could occur when following sites in Reader. [#21140]
* [*] Fixed a crash that occurs in Weekly Roundup Background task due to a Core Data Concurrency violation. [#21076]
* [***] Block editor: Editor UX improvements with new icons, colors and additional design enhancements. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/5985]

22.8
-----
* [*] Blogging Reminders: Disabled prompt for self-hosted sites not connected to Jetpack. [#20970]
* [**] [internal] Do not save synced blogs if the app has signed out. [#20959]
* [**] [internal] Make sure synced posts are saved before calling completion block. [#20960]
* [**] [internal] Fix observing Quick Start notifications. [#20997]
* [**] [internal] Fixed an issue that was causing a memory leak in the domain selection flow. [#20813]
* [*] [Jetpack-only] Block editor: Rename "Reusable blocks" to "Synced patterns", aligning with the web editor. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/5885]
* [**] [internal] Block editor: Fix a crash related to Reanimated when closing the editor [https://github.com/wordpress-mobile/gutenberg-mobile/pull/5938]

22.7
-----
* [**] [internal] Blaze: Switch to using new canBlaze property to determine Blaze eligiblity. [#20916]
* [**] Fixed crash issue when accessing drafts that are mid-upload from the Home 'Work on a Draft Post' card. [#20872]
* [**] [internal] Make sure media-related features function correctly. [#20889], [20887]
* [*] [internal] Posts list: Disable action bar/menu button when a post is being uploaded [#20885]